# internal/models/stats.go
@@ -1,9 +1,10 @@
 package models
 
 type Stats struct {
-	TradeCount  uint    `json:"tradeCount"`
+	TradeCount  int     `json:"tradeCount"`
 	AvgPNL      float64 `json:"avgPNL"`
 	TotalVolume float64 `json:"totalVolume"`
+	TotalYield  float64 `json:"totalYield"`
 	AvgTrade    float64 `json:"avgTrade"`
 	TimeRunning string  `json:"timeRunning"`
 }
